--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node bot.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
-    "openai": "^4.3.1",
-    "node-cron": "^3.0.2",
-    "axios": "^1.7.0",
+    "discord.js": "^14.0.0",
+    "dotenv": "^16.0.0",
+    "openai": "^4.0.0",
+    "node-cron": "^3.0.0",
+    "axios": "^1.5.0",
     "express": "^4.18.2"
   }
 }
