--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "discord.js": "^14.0.0",
-    "dotenv": "^16.0.0",
-    "openai": "^4.0.0",
-    "node-cron": "^3.0.0",
-    "axios": "^1.5.0",
-    "express": "^4.18.2"
+    "axios": "^1.12.2",
+    "discord.js": "^14.22.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "instagram-scraping": "^1.0.17",
+    "newsapi": "^2.4.1",
+    "node-cron": "^3.0.3",
+    "openai": "^4.104.0"
   }
 }
