--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "postinstall": "npm install"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "discord.js": "^14.22.1",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
