--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "postinstall": "npm install"
+    "start": "node bot.js"
   },
   "engines": {
     "node": ">=18.0.0"
