--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+node_modules/
+.env
+data/
+*.log
+dist/
+/.vscode/.history
 # Node modules
 node_modules/
 
@@ -14,6 +20,20 @@ memory.json
 conversationmemory.json
 birthdays.json
 influencerPosts.json
+
+# Root-level data files (moved into data/)
+partners.json
+partnerQueue.json
+partnerqueue.json
+strikes.json
+habits.json
+fitnessweekly.json
+fitnessmonthly.json
+fitnesscache.json
+conversationData.json
+conversationMemory.json
+sentData.json
+challenges.json
 
 # Package lock (optional if you want Railway to rebuild)
 package-lock.json
