Modernize GymBroBot: add grouped slash commands, Mongo-backed storage with file fallback, timezone fixes, pinned admin docs & health checks, fitness economy features (achievements, profile, leaderboards, role perks), and various fixes

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "googleapis": "^160.0.0",
     "newsapi": "^2.4.1",
     "node-cron": "^3.0.3",
-  "luxon": "^3.4.0",
+  "@napi-rs/canvas": "^0.1.32",
+    "luxon": "^3.4.0",
     "openai": "^4.104.0",
     "mongodb": "^5.6.0"
   }
