--- a/railway.toml
+++ b/railway.toml
@@ -8,11 +8,11 @@ builder = "NIXPACKS"
 NODE_VERSION = "20"
 
 [deploy]
-startCommand = "node bot.js"
+startCommand = "./start.sh"
 healthcheckPath = "/health"
-healthcheckTimeout = 300
+healthcheckTimeout = 600
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
+restartPolicyMaxRetries = 5
 
 [env]
 # Note: Set these in Railway dashboard, not here
