--- a/railway.toml
+++ b/railway.toml
@@ -8,11 +8,11 @@ builder = "NIXPACKS"
 NODE_VERSION = "20"
 
 [deploy]
-startCommand = "./start.sh"
+startCommand = "node bot.js"
 healthcheckPath = "/health"
-healthcheckTimeout = 600
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 5
+restartPolicyMaxRetries = 2
 
 [env]
 # Note: Set these in Railway dashboard, not here
